# cellular

./: .gitignore  Cargo.toml  config.toml
src/: cell.rs  cell_library.rs  config.rs  conway_cell.rs  generic_system.rs  grid.rs  input.rs  main.rs  phased_particle_system.rs  util.rs  window.rs
src/cell_library/: complex_diffusion.rs  conway_cell.rs  diffusion.rs  particle_diffusion.rs  particle_diffusion_defectiv.rs  phased_particle_diffusion.rs  phased_particle_diffusion_2.rs  sandpile.rs  schrodinger.rs  wave_equation.rs  xy_model.rs
src/grid/: boundary.rs  grid_pos.rs  grid_view.rs
