[package]
name = "cellular"
version = "0.1.0"
authors = ["Alex Kuczala <kookzala@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3"
env_logger = "0.8"
getrandom = "0.2"
line_drawing = "0.8"
log = "0.4"
pixels = "0.4.0"
randomize = "3.0"
winit = "0.25"
winit_input_helper = "0.10"
num-complex = "0.4"
palette="0.5"
num-traits="0.2.14"
enum_dispatch = "0.3.7"